--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,3 +3,5 @@
 <ul>
     <li *ngFor='let user of users'>{{user.id}} - {{user.userName}}</li>
 </ul>
+
+<countdown-timer [countDownTimerConfig]="testConfig"></countdown-timer>
